# ForestHealth

./: .gitignore  FEATURE_CONFIGURATION.md  README.md  environment.yml  labelling.qgz  pyproject.toml  run.py  template.env
DATA/: aoi_hornisgrinde.geojson  aoi_hs.geojson  blackForestPoly.geojson  forest_labels.geojson  sampleForestPoly.geojson
notebooks/: band_eda.ipynb  clustering.ipynb  dem_analysis.ipynb  sentinelhub_request.ipynb
src/: config.py  data_models.py  default_features.json  run.py
src/core/: config.py  date_utils.py  geometry.py  logger.py  paths.py
src/data_processing/: band_dto.py  dem_processor.py  feature_calculators.py  feature_service.py  geometry_processor.py
src/data_sourcing/: data_models.py  evalscripts.py  geometry_toolkit.py  sentinelhub_api.py
src/pipeline/: clustering.py  download.py  evalscripts.py  train_classifier.py
src/pydantic_models/: feature_setting.py  feature_setting_base.py  feature_setting_spatial.py  feature_setting_temporal.py  foresthealth_base_model.py
src/tests/tests_pipeline/: test_env.py
src/tests/tests_utils/: test_date_helper.py  test_evalscripts.py  (+1 more)
src/utils/: date_helper.py  evalscripts.py  geometry.py  paths.py  sentinelhub_api.py
tests/tests_core/: test_date_utils.py
tests/tests_data_processing/: conftest.py  test_feature_calculators.py  test_feature_service.py  test_geometry_processor.py
tests/tests_data_sourcing/: test_geometry_toolkit.py  test_sentinelhub_api.py
tests/tests_utils/: test_date_helper.py  test_date_utils.py  test_evalscripts.py  test_sentinelhub_api.py
