[project]
name = "foresthealth"
version = "0.1.0"
description = ""
authors = [
    {name = "Hagenbeck",email = "peerschlieker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "sentinelhub (>=3.11.1,<4.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "ipyleaflet (>=0.20.0,<0.21.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pysheds (>=0.5,<0.6)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.7.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.6"
plotly = "^6.3.0"
geojson = "^3.2.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
